<resources>
    <string name="app_name">Calculadora IMC</string>
    <string name="Nome">Digite o Nome</string>
    <string name="Idade">Digite a Idade</string>
    <string name="Peso">Digite o Peso(em quilogramas)</string>
    <string name="Altura">Digite a Altura (em metros)</string>
    <string name="Calcular">Calcular o IMC</string>
    <string name="Resultado">msg: IMC Calculado</string>
    <string name="Texto1">Bem vindo a Calculadora IMC</string>
    <string name="Texto2">Para saber seu IMC aperte no botão</string>
    <string name="botao">Clique Aqui</string>
</resources>